@@ -316,7 +316,8 @@ IF(NOT CMTK_USE_MPI)
     mk_phantom_3dSphereRelative
     mk_phantom_3dSphereRelative2
     mk_phantom_3dBoxSphere 
-    mk_phantom_3dImport)
+    mk_phantom_3dImport
+    mk_phantom_3dImportGrid)
 
   # ==========================================
   # Tests for "model" tool
